# vending-server

./: .gitignore  API.md  DEPLOYMENT.md  README.md  docker-compose.yml  env.example  pyproject.toml  requirements.txt  test_payment_flow.sh  test_raspberry_payment.py
alembic/: env.py
alembic/versions/: c624136a949a_initial_migration.py
app/: main.py
app/api/: auth.py  deps.py  events.py  health.py  payments.py  webhooks.py
app/core/: config.py  rate_limit.py  security.py
app/db/: models.py  session.py
app/schemas/: auth.py  events.py  payments.py
app/services/: btcpay.py  notifications.py
app/worker/: celery_app.py  tasks.py
cloudflared/: README.md  config.yml.example
docker/: Dockerfile.api  Dockerfile.worker
scripts/: client_demo.py  create_client.py  generate_jwt_keys.sh  raspberry_bootstrap.sh
tests/: README.md  check_lightning_simple.py  check_node_channels.py  conftest.py  diagnose_btcpay.py  test_raspberry_payment.py
tests/e2e/: test_payment_flow.py
tests/unit/: test_auth.py  test_models.py  test_security.py
