[tool.poetry]
name = "vending-server"
version = "0.1.0"
description = "Bitcoin Lightning payment server for vending machines"
authors = ["Your Name <you@example.com>"]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

